# esp32

./: .gitignore  README.md
ble/beacon/: CMakeLists.txt  sdkconfig  sdkconfig.old
ble/beacon/main/: CMakeLists.txt  esp_ibeacon_api.c  main.c
ble/ble_eddystone/: sdkconfig
lvgl/lvgl/: CMakeLists.txt  sdkconfig  sdkconfig.old
lvgl/lvgl/display_lvgl_demos/main/: idf_component.yml
lvgl/lvgl/main/: idf_component.yml  main.c
mpu6050/main/: main.c
wifi/AP/: CMakeLists.txt  sdkconfig  sdkconfig.old
wifi/AP/main/: CMakeLists.txt  main.c  root.html
wifi/http/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
wifi/http/main/: CMakeLists.txt  idf_component.yml  main.c
ws2812/: CMakeLists.txt
ws2812/main/: main.c
